# ROS_training

basics/: CMakeLists.txt  package.xml
basics/src/: doubler.py  fancy_action_client.py  fancy_action_server.py  service_client.py  service_server.py  simple_action_client.py  simple_action_server.py  topic_publisher.py  topic_subscriber.py
retailbot/retailbot_bringup/retailbot_controllers/: CMakeLists.txt  package.xml
retailbot/retailbot_bringup/retailbot_controllers/config/: controllers.yaml  robot_localization.yaml  twist_mux.yaml
retailbot/retailbot_bringup/retailbot_controllers/launch/: controllers_gazebo.launch
retailbot/retailbot_description/: CMakeLists.txt  package.xml  urdf.rviz
retailbot/retailbot_description/launch/: display.launch  gazebo.launch
retailbot/retailbot_description/meshes/: base_link.STL  caster.STL  caster1.STL  free.STL  free1.STL  imu.STL  laser.STL  left_wheel.STL  right_wheel.STL  stage1.STL
retailbot/retailbot_description/urdf/: retailbot_base.gazebo  retailbot_base.urdf.xacro  retailbot_description.urdf
retailbot/retailbot_navigation/: CMakeLists.txt  package.xml
retailbot/retailbot_navigation/config/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  gmapping_params.yaml  move_base_params.yaml
retailbot/retailbot_navigation/launch/: gmapping.launch  hector_slam.launch  localization.launch.xml  map_navigation.launch  move_base.launch.xml  move_base_odom.launch  odom_navigation.launch
retailbot/retailbot_simulation/: CMakeLists.txt  package.xml
retailbot/retailbot_teleop/: CMakeLists.txt  package.xml
(+18 files in other folders)
